--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <div class="w-full max-w-6xl mx-auto bg-white p-6 sm:p-8 rounded-2xl shadow-lg">
             <div class="flex flex-col sm:flex-row justify-between items-center border-b border-gray-200 pb-4 mb-6 gap-4">
                 <h1 class="text-2xl sm:text-4xl font-bold text-gray-800 text-center sm:text-left">나눗셈 원리 배우기</h1>
-                <button class="home-btn bg-gray-700 hover:bg-gray-800 text-white font-bold py-2 px-4 rounded-lg text-lg">🏠 홈으로</button>
+                <button class="home-btn bg-gray-700 hover:bg-gray-800 text-white font-bold py-2 px-4 rounded-lg text-lg">🏠 모드 선택</button>
             </div>
             <div id="problem-selector" class="flex flex-col sm:flex-row justify-center gap-4 mb-6">
                 <button id="problem1-btn" class="problem-btn">문제 1: 475 ÷ 3</button>
@@ -210,7 +210,7 @@
                 <h1 class="text-2xl sm:text-4xl font-bold text-gray-800">나눗셈 실력 다지기 <span id="problem-counter"></span></h1>
                 <div class="flex gap-2">
                     <button class="export-btn bg-purple-500 hover:bg-purple-600 text-white font-bold py-2 px-4 rounded-lg text-lg" disabled>결과 저장</button>
-                    <button class="home-btn bg-gray-700 hover:bg-gray-800 text-white font-bold py-2 px-4 rounded-lg text-lg">🏠 홈으로</button>
+                    <button class="home-btn bg-gray-700 hover:bg-gray-800 text-white font-bold py-2 px-4 rounded-lg text-lg">🏠 모드 선택</button>
                 </div>
             </div>
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-8">
@@ -296,10 +296,8 @@
         });
         homeBtns.forEach(btn => btn.addEventListener('click', () => {
             showSection('main-menu');
-            loginForm.classList.remove('hidden');
-            modeSelector.classList.add('hidden');
-            studentNumberSelect.value = '';
-            studentNameInput.value = '';
+            loginForm.classList.add('hidden');
+            modeSelector.classList.remove('hidden');
         }));
         
         // Populate student number dropdown
