--- a/index.html
+++ b/index.html
@@ -296,8 +296,8 @@
         });
         homeBtns.forEach(btn => btn.addEventListener('click', () => {
             showSection('main-menu');
-            loginForm.classList.add('hidden');
-            modeSelector.classList.remove('hidden');
+            loginForm.classList.remove('hidden');
+            modeSelector.classList.add('hidden');
         }));
         
         // Populate student number dropdown
